# booklog-cli

./: .gitignore  Cargo.toml  books.csv
src/: main.rs  types.rs
src/config/: mod.rs
src/file_loading/: mod.rs
src/isbn/: api.rs  mod.rs
