[package]
name = "booklog-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.9"
shellexpand = "3.1"
